@@ -1,5 +1,5 @@
 >> setupATLAS
->> rcSetup Top,2.3.20
+>> rcSetup Top,2.3.30
 
 **************
 Note -- if you already have ttHMultilepton checked out locally AND wish to set up both RC and the grid-related accoutrements, you can do: 
