@@ -29,21 +29,21 @@ OutputEvents SelectedEvents
 PerfStats No
 NEvents 0
 
-PRWConfigFiles    ttHMultilepton/tthML.PURWTconfig.361106.root ttHMultilepton/tthML.PURWTconfig.361500.root ttHMultilepton/tthML.PURWTconfig.361501.root ttHMultilepton/tthML.PURWTconfig.361502.root ttHMultilepton/tthML.PURWTconfig.361503.root ttHMultilepton/tthML.PURWTconfig.361504.root ttHMultilepton/tthML.PURWTconfig.361505.root ttHMultilepton/tthML.PURWTconfig.361506.root ttHMultilepton/tthML.PURWTconfig.361507.root ttHMultilepton/tthML.PURWTconfig.361508.root ttHMultilepton/tthML.PURWTconfig.361509.root ttHMultilepton/tthML.PURWTconfig.361510.root ttHMultilepton/tthML.PURWTconfig.361511.root ttHMultilepton/tthML.PURWTconfig.361512.root ttHMultilepton/tthML.PURWTconfig.361513.root ttHMultilepton/tthML.PURWTconfig.361514.root ttHMultilepton/tthML.PURWTconfig.361520.root ttHMultilepton/tthML.PURWTconfig.361521.root ttHMultilepton/tthML.PURWTconfig.361522.root ttHMultilepton/tthML.PURWTconfig.361523.root ttHMultilepton/tthML.PURWTconfig.361524.root ttHMultilepton/tthML.PURWTconfig.361525.root ttHMultilepton/tthML.PURWTconfig.361526.root ttHMultilepton/tthML.PURWTconfig.361527.root ttHMultilepton/tthML.PURWTconfig.361528.root ttHMultilepton/tthML.PURWTconfig.361529.root ttHMultilepton/tthML.PURWTconfig.361530.root ttHMultilepton/tthML.PURWTconfig.361531.root ttHMultilepton/tthML.PURWTconfig.361532.root ttHMultilepton/tthML.PURWTconfig.361533.root ttHMultilepton/tthML.PURWTconfig.361534.root
+PRWConfigFiles    ttHMultilepton/tthML.PURWTconfig.361106.root ttHMultilepton/tthML.PURWTconfig.361500.root ttHMultilepton/tthML.PURWTconfig.361501.root ttHMultilepton/tthML.PURWTconfig.361502.root ttHMultilepton/tthML.PURWTconfig.361503.root ttHMultilepton/tthML.PURWTconfig.361504.root ttHMultilepton/tthML.PURWTconfig.361505.root ttHMultilepton/tthML.PURWTconfig.361506.root ttHMultilepton/tthML.PURWTconfig.361507.root ttHMultilepton/tthML.PURWTconfig.361508.root ttHMultilepton/tthML.PURWTconfig.361509.root ttHMultilepton/tthML.PURWTconfig.361510.root ttHMultilepton/tthML.PURWTconfig.361511.root ttHMultilepton/tthML.PURWTconfig.361512.root ttHMultilepton/tthML.PURWTconfig.361513.root ttHMultilepton/tthML.PURWTconfig.361514.root ttHMultilepton/tthML.PURWTconfig.361520.root ttHMultilepton/tthML.PURWTconfig.361521.root ttHMultilepton/tthML.PURWTconfig.361522.root ttHMultilepton/tthML.PURWTconfig.361523.root ttHMultilepton/tthML.PURWTconfig.361524.root ttHMultilepton/tthML.PURWTconfig.361525.root ttHMultilepton/tthML.PURWTconfig.361526.root ttHMultilepton/tthML.PURWTconfig.361527.root ttHMultilepton/tthML.PURWTconfig.361528.root ttHMultilepton/tthML.PURWTconfig.361529.root ttHMultilepton/tthML.PURWTconfig.361530.root ttHMultilepton/tthML.PURWTconfig.361531.root ttHMultilepton/tthML.PURWTconfig.361532.root ttHMultilepton/tthML.PURWTconfig.361533.root ttHMultilepton/tthML.PURWTconfig.361534.root ttHMultilepton/tthML.PURWTconfig.410000.root
 PRWLumiCalcFiles  ttHMultilepton/ilumicalc_histograms_HLT_mu20_iloose_L1MU15_267073-271744.root ttHMultilepton/ilumicalc_histograms_HLT_mu20_iloose_L1MU15_276262-279598.root
-PRWDefaultChannel 361106
+PRWDefaultChannel 410000
 
-CalculateSF True
 Systematics Nominal
 
 #Electron cuts
-ElectronID LHLoose
-ElectronIDLoose LHLoose
+ElectronID LooseLH
+ElectronIDLoose LooseLH
 ElectronPt 5000.
+ElectronIsoSFs False
 
 #Muon cuts
-MuonQuality VeryLoose
-MuonQualityLoose VeryLoose
+MuonQuality Loose
+MuonQualityLoose Loose
 MuonEta 2.7
 MuonPt 5000.
 
